# 2.02.00 (30671) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30670
# 2.01.03 (29786) Mar 24, 2009
3/24/09 publish dev version so that fixes can be verified
3/24/09 #1519, change control panel insets to account for PhetFont
3/23/09 #1520, fix visibility of laser beam when a config is loaded
3/23/09 #1518, fluid controls check box should be unchecked by default
# 2.01.02 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
3/16/09 #1494, selected and unselected tab colors are indistinguishable
3/12/09 #1453, remove unused strings from English localization file
# 2.01.01 (28805) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
10/8/08 - use PhetApplicationConfig.launchSim
10/8/08 - moved list of rejected features to Unfuddle 805
9/5/08 - remove uses of DialogUtils, use JOptionPane directly
6/24/08 - move SphericalNode to piccolo-phet
> improve fonts
5/20/08 - replace Font with PhetFont
# 2.01.00 (21029)
4/28/08 - add PhetLookAndFeel to main
4/28/08 - pick up fix to PhetDefaultFont so that preferred fonts are derived properly
4/28/08 - pick up change to PhetDefaultFont so that default font is "Lucida Sans" plain 12pt on all platforms
4/28/08 - redeploy production version to fix translations (Unfuddle #141)
# 2.00.01 (20988)
4/28/08 - publish dev version to test translations (Unfuddle #141)
4/4/08 - remove clock icon from OTClockControlPanel, animated icon was added to phetcommon
1/4/08 - delete OTLauncher, obsolete
# 2.00.00 (18753)
11/14/07 - organize imports
11/9/07 - move about.credits property to localization file
# 1.00.16 (18421)
10/31/07 - update screenshots, create screenshots for new flavors
10/31/07 - use constant stall force strategy, 6pN for EnzymeA, 7pN for EnzymeB
10/30/07 - flavorize:"Optical Tweezers and Applications", "Stretching DNA", "Molecular Motors"
10/25/07 - make DNAForceVector an observer of Fluid, so that stall force vector is updated when ATP changes